Remove add-opens workaround in ToolchainPlugin